--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,8 @@
 		"vscode": {
 			"extensions": [
 				"rust-lang.rust-analyzer",
-				"lanza.lldb-vscode"
+				"lanza.lldb-vscode",
+				"vadimcn.vscode-lldb"
 			]
 		}
 	}
